# rai_smiley

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
pc_smiley/: Smiley.py
pc_smiley/resources/: facial_data.csv
src/rai_smiley/: Smiley.py  __init__.py  smiley.py
tests/: test_smiley.py
